--- a/styles/main.css
+++ b/styles/main.css
@@ -46,13 +46,15 @@ body {
 .cell {
     width: 80px;
     height: 80px;
-    background-color: #f0e5d8;
+    background-image: url(/assets/box1-removebg-preview.png);
+    background-size: 125%;
+    background-repeat: no-repeat;
+    /* background-color: #f0e5d8;
     border: 2px solid #ccc;
-    border-radius: 10px;
+    border-radius: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
 }
 
 
@@ -65,7 +67,6 @@ button {
     color: white;
     font-size: 13px;
     align-items: center;
-    cursor: pointer;
     transition: background-color 0.3s;
 }
 
@@ -87,7 +88,6 @@ button:hover {
     border: none;
     border-radius: 6px;
     font-size: 12px;
-    cursor: pointer;
     transition: background-color 0.3s;
 }
 
@@ -118,4 +118,8 @@ button:hover {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.freez-cursor{
+    cursor: none;
 }
