--- a/styles/main.css
+++ b/styles/main.css
@@ -1,26 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Lexend:wght@100..900&family=Press+Start+2P&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Lexend:wght@100..900&family=Press+Start+2P&family=Raleway:ital,wght@0,100..900;1,100..900&family=Tektur:wght@400..900&display=swap');
 
 * {
-
     font-family: "Press Start 2P", system-ui;
 }
 
 p {
     font-size: 25px;
     font-weight: bold;
-    /* color: #333; */
     color: rgb(173, 171, 171);
     margin-bottom: 20px;
 }
 
 body {
-    background-image: url(/assets/backgrund1.png);
     text-align: center;
     background-color: #0a0710;
     padding: 20px;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#background-img {
+    background-image: url('/assets/bakground00.png');
+    padding: 10px;
+    width: 800px;
+    margin: auto;
+    border: 2px solid rgb(173, 171, 171);
+    border-radius: 2px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
 }
 
 .status-bar {
@@ -33,6 +42,11 @@ body {
     color: rgb(173, 171, 171);
 }
 
+.time-red {
+    color: red;
+    font-weight: bold;
+}
+
 .wrapper {
     display: flex;
     justify-content: center;
@@ -43,20 +57,16 @@ body {
     display: flex;
     flex-wrap: wrap;
     float: inline-start;
-    width: 450px;
-    gap: 15px;
+    width: 600px;
+    gap: 1px;
     justify-content: center;
 }
 
 .cell {
-    width: 80px;
-    height: 80px;
-    /* background-image: url(/assets/box1-removebg-preview.png); */
+    width: 110px;
+    height: 110px;
     background-size: 125%;
     background-repeat: no-repeat;
-    /* background-color: #f0e5d8;
-    border: 2px solid #ccc;
-    border-radius: 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,7 +98,7 @@ button:hover {
 
 .level-btn {
     padding: 13px 17px;
-    background-color: #20a39e;
+    background-color: #2d3f7b;
     color: white;
     border: none;
     border-radius: 6px;
@@ -97,13 +107,13 @@ button:hover {
 }
 
 .level-btn:hover {
-    background-color: #17817d;
+    background-color: #213167;
 }
 
 .message {
     font-size: 15px;
     font-weight: bold;
-    color: #4b4b4b;
+    color: rgb(189, 187, 187);
     margin-bottom: 15px;
 }
 
@@ -115,7 +125,7 @@ button:hover {
 }
 
 .dog {
-    background-image: url('/assets/dogSpace-removebg-preview.png');
+    background-image: url('/assets/dogSpace.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -134,7 +144,6 @@ button:hover {
 
 .how-to-btn {
     font-weight: bold;
-    /* border-radius: 50%; */
     width: 30px;
     height: 30px;
     padding: 0;
@@ -157,11 +166,11 @@ button:hover {
     left: 50%;
     transform: translateX(-50%);
     background-color: #fff5e1;
-    border: 2px solid #ffa500;
+    border: 2px solid #1f3e5a;
     border-radius: 10px;
     padding: 20px;
-    width: 300px;
-    box-shadow: 0 0 15px rgba(255, 165, 0, 0.5);
+    width: 400px;
+    box-shadow: 0 0 15px #30475b;
     z-index: 10000;
 }
 
@@ -169,12 +178,12 @@ button:hover {
     padding-left: 20px;
     text-align: left;
     margin: 10px 0;
-    font-family: "Tektur", sans-serif;
+    line-height: 1.5;
 }
 
 .close-btn {
     margin-top: 10px;
-    background-color: #ffa500;
+    background-color: #1f3e5a;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -184,5 +193,9 @@ button:hover {
 }
 
 .close-btn:hover {
-    background-color: #e59400;
+    background-color: #172e43;
+}
+
+#hits-num {
+    color: #4c6277;
 }
