--- a/styles/main.css
+++ b/styles/main.css
@@ -24,11 +24,12 @@ body {
     padding: 10px;
     width: 800px;
     margin: auto;
-    border: 2px solid rgb(173, 171, 171);
+    border: 3px solid rgb(173, 171, 171);
     border-radius: 2px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    /* box-shadow: 5px 5px 8px rgb(238, 236, 236); */
 
 }
 
@@ -76,7 +77,7 @@ body {
 button {
     margin: 10px;
     padding: 10px 20px;
-    background-color: #ffa500;
+    background-color: #2d3f7b;
     border: none;
     border-radius: 8px;
     color: white;
@@ -86,7 +87,7 @@ button {
 }
 
 button:hover {
-    background-color: #ff8c00;
+    background-color: #213167;
 }
 
 .level-btns {
@@ -104,6 +105,7 @@ button:hover {
     border-radius: 6px;
     font-size: 12px;
     transition: background-color 0.3s;
+    visibility: hidden;
 }
 
 .level-btn:hover {
@@ -148,7 +150,7 @@ button:hover {
     height: 30px;
     padding: 0;
     cursor: pointer;
-    background-color: #ffa500;
+    background-color: #2d3f7b;
     border: none;
     color: white;
     font-size: 15px;
@@ -156,7 +158,7 @@ button:hover {
 }
 
 .how-to-btn:hover {
-    background-color: #e59400;
+    background-color: #213167;
 }
 
 .how-to-play-popup {
@@ -199,3 +201,4 @@ button:hover {
 #hits-num {
     color: #4c6277;
 }
+
